--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,10 +10,12 @@
                 <section th:replace="~{categoria/fragmentos :: iniciarSesion}"/>
 
                 <header th:replace="~{layout/plantilla :: header}"/>
-
-                <aside th:replace="~{layout/plantilla :: vendido}"/>
-                <div th:replace="~{layout/plantilla :: compras}"/>
-                <div th:replace="~{layout/plantilla :: busqueda}"/>
+                <section th:replace="~{layout/plantilla :: banner}"/>
+                <section th:replace="~{layout/plantilla :: container}">
+                    <aside th:replace="~{layout/plantilla :: vendido}"/>
+                    <div th:replace="~{layout/plantilla :: compras}"/>
+                    <div th:replace="~{layout/plantilla :: busqueda}"/>
+                </section>
 
                 <footer th:replace="~{layout/plantilla :: footer}"/>
                 </body>
