--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -9,23 +9,23 @@
         <script th:src="@{/js/rutinas.js}"></script>   
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <style>
-            /* Estilos CSS generales */
             body {
                 font-family: Arial, sans-serif;
                 margin: 0;
                 padding: 0;
                 display: flex;
                 flex-direction: column;
-                min-height: 100vh; /* Altura mínima de la ventana */
+                min-height: 100vh;
             }
 
-            /* Estilos para el contenido principal */
             main {
-                flex: 1; /* Esto hace que el contenido principal ocupe el espacio restante */
+                flex: 1;
                 padding: 20px;
                 display: flex;
-                justify-content: space-between; /* Alinear a los extremos horizontales */
+                justify-content: space-between;
             }
 
             /* Estilos para los aside */
@@ -41,11 +41,6 @@
                 margin-right: 20px; /* Espacio entre los aside */
             }
 
-            .right {
-                position: fixed;
-                right: 20px; /* distancia desde el borde derecho */
-                top: 125px;
-            }
 
             aside h2 {
                 font-size: 20px;
@@ -134,54 +129,95 @@
                 text-decoration: underline;
             }
 
-            .search-container {
-                max-width: 600px;
-                margin: 0 auto;
-                background-color: #fff;
-                padding: 20px;
-                border-radius: 8px;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-                display: flex;
-                align-items: center;
-                position: fixed;
-                top: 125px;
-                left: 40%;
-
-            }
-            .search-container input[type="text"] {
-                flex: 1;
-                padding: 10px;
-                border: 1px solid #ddd;
-                border-radius: 4px;
-                font-size: 16px;
-            }
-            .search-container button {
-                padding: 10px 20px;
-                margin-left: 10px;
-                color: #fff;
-                border: none;
-                border-radius: 4px;
-                cursor: pointer;
-                font-size: 16px;
-            }
-            .search-container button:hover {
-                background-color: #0056b3;
-            }
-            .search-container {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-            }
-
-            .search-input-container {
-                flex: 1;
-                margin-right: 10px;
-            }
 
             .dropdown {
                 flex: 0 0 auto;
             }
 
+            .banner {
+                max-height: 200px;
+                width: 100%;
+            }
+
+            ._descripcion{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            .search_bar {
+                border-radius: 15px;
+                width: 100%;
+                outline: none;
+                border: none;
+                padding: 10px;
+                border: 1px solid #ccc;
+            }
+            .center {
+                width: 100%;
+                gap: 40px;
+                padding: 0px 20px;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+            }
+            .left {
+                height: 100vh;
+                width: 25%;
+            }
+
+            ._right {
+                height: 100vh;
+                width: 25%;
+                gap: 10px;
+                display: flex;
+                flex-direction: column;
+
+            }
+
+            ._container  {
+                display: flex;
+                flex-direction: row;
+                gap: 10px;
+                width: 100%;
+                height: 100%;
+                margin-top: 40px;
+            }
+
+            .container_search_bar {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                max-height: 40px;
+                gap: 10px;
+            }
+
+            .button_search {
+                border-radius: 10px;
+                border: none;
+                padding: 10px 20px;
+                background-color: transparent;
+                color: white;
+                font-family: sans-serif;
+                cursor: pointer;
+                background-color: #0056b3;
+            }
+
+            .description {
+                width: 100%;
+                height: 100%;
+                margin-top: 10px;
+            }
+
+            .right_list {
+                height: 30%;
+
+            }
+
+            .right_contact {
+                height: 30%;
+
+            }
         </style>
     </head>
     <body>
@@ -209,13 +245,11 @@
             </a>
             <nav class="nav">
                 <a href="/" class="nav-link">[[#{accion.inicio}]]</a>
-                <a href="#" class="nav-link">[[#{plantilla.productos}]]</a>
-                <a href="#" class="nav-link">[[#{plantilla.categorias}]]</a>
-                <a href="#" class="nav-link">[[#{aplicacion.preguntas}]]</a>
-                <a href="#" class="nav-link">[[#{aplicacion.nosotros}]]</a>
+                <a href="/producto" class="nav-link">[[#{plantilla.productos}]]</a>
+                <a href="/servicios" class="nav-link">Servicios</a>
+                <a href="/nosotros" class="nav-link">[[#{aplicacion.nosotros}]]</a>
             </nav>
             <div th:if="${isLoggedIn}">
-                <!-- Contenido para usuario autenticado -->
                 <button type="button" class="btn btn-outline-primary me-2">
                     <i></i> [[#{usuario.perfil}]]
                 </button>
@@ -241,38 +275,48 @@
         </header>
 
 
-        <aside class="left" th:fragment="vendido">
-            <h2>Producto más vendido</h2>
-            <div class="producto">
-                <img src="ruta/a/la/imagen-del-producto.jpg" alt="Producto más vendido">
+        <img th:fragment="banner" src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/Bienvenido%20Grama.png?alt=media&token=b1b3a721-3689-4aec-b15d-27490ebf1fbb" alt="Banner" class="banner" />
+
+        <div th:fragment="container" class="_container">
+            <div  th:fragment="vendido" class="left">
+                <p><h2>Producto más vendido</h2>
+                <div class="producto">
+                    <img src="ruta/a/la/imagen-del-producto.jpg" alt="Producto más vendido">
                     <h3>Nombre del Producto</h3>
                     <p>Descripción breve del producto más vendido.</p>
                     <p><strong>Precio:</strong> $XX.XX</p>
                     <a href="enlace-al-producto">Ver más</a>
+                </div></p>
             </div>
-        </aside>
+            <div  th:fragment="busqueda" class="center">
+                <div class="container_search_bar">
+                    <input type="text" class="search_bar" placeholder="Buscar producto">
+                    <button class="button_search">Buscar</button>
+                </div>
 
-        <div th:fragment="compras" class="right">    
-            <aside  th:fragment="compras">
-                <h2>Lista de compras</h2>
-                <ul class="compras">
-                    <li>Producto 1</li>
-                    <li>Producto 2</li>
-                    <li>Producto 3</li>
-                </ul>
-                <button type="button" class="btn btn-outline-primary me-2">
-                    <i></i> Comprar
-                </button>
-            </aside>
-
-            <aside  th:fragment="contactos">
-                <h2>Contactos de la empresa</h2>
-                <ul>
-                    <li><strong>Teléfono:</strong> +1234567890</li>
-                    <li><strong>Correo electrónico:</strong> info@empresa.com</li>
-                </ul>
-            </aside>
+                <div class="description">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/discount%20grama.png?alt=media&token=37776829-b0a2-4587-9aab-21cb190aa43d" alt="Descripcion" class="_descripcion"/>
+                </div>
+            </div>
+            <div th:fragment="compras" class="_right">
+                <div class="right_list">            <h2>Lista de compras</h2>
+                    <ul class="compras">
+                        <li>Producto 1</li>
+                        <li>Producto 2</li>
+                        <li>Producto 3</li>
+                    </ul>
+                    <button type="button" class="btn btn-outline-primary me-2">
+                        <i></i> Comprar
+                    </button></div>
+                <div  th:fragment="contactos" class="right_contact"> <h2>Contactos de la empresa</h2>
+                    <ul>
+                        <li><strong>Teléfono:</strong> +1234567890</li>
+                        <li><strong>Correo electrónico:</strong> info@empresa.com</li>
+                    </ul>
+                </div>
+            </div>
         </div>
+
 
         <footer th:fragment="footer">
             <div>
