--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -7,17 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<section th:replace="~{categoria/fragmentos :: iniciarSesion}"/>
-
 <header th:replace="~{layout/plantilla :: header}"/>
 
-<aside th:replace="~{layout/plantilla :: vendido}"/>
-<div th:replace="~{layout/plantilla :: compras}"/>
-<div th:replace="~{layout/plantilla :: busqueda}"/>
+<div class="container d-flex justify-content-center mt-5">
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="..." class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Perfil</h5>
+                    <p class="card-text">Nombre completo </p>
+                    <p class="card-text">Cédula </p>
+                    <p class="card-text">Correo Electrónico </p>
+                    <p class="card-text">Teléfono </p>
+                    <button type="button" class="btn btn-primary">Editar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-
-
-
+<h2 class="text-center mt-5">PRODUCTOS FAVORITOS</h2>
 
 <footer th:replace="~{layout/plantilla :: footer}"/>
 </body>
